--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <button class="btn btn-outline-primary nav-link" onclick="toggleTheme()"><i class="fas fa-moon"></i> Dark
+            <button class="btn btn-outline-primary nav-link shadow-lg mt-2" onclick="toggleTheme()"><i
+                class="fas fa-moon"></i> Dark
               Mode</button>
           </li>
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://wa.me/+5493513872478" target="_blank"><img
-                src="./assets/icon/icons8-whatsapp.svg" alt="WhatsApp" width="24" height="24"></a></li>
+          <li class="nav-item"><a class="nav-link" href="https://wa.me/+5493517587047" target="_blank"><img
+                src="./assets/icon/icons8-whatsapp.svg" class="wsp" alt="WhatsApp" width="40" height="40"></a></li>
         </ul>
       </div>
     </div>
@@ -75,66 +75,94 @@
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/yo.jpg" alt="Perfil" class="img-fluid rounded shadow">
+            <img src="./assets/yo.jpg" alt="Perfil" class="border-bottom border-top border-primary border-3 img-fluid rounded shadow">
           </div>
         </div>
       </div>
 
-      <!-- Experiencia -->
-      <div class="col-12 mb-5" data-aos="fade-up">
-        <h3 class="mb-3 fw-bold">Experiencia</h3>
-        <div class="card shadow-sm mb-3">
-          <div class="card-body d-flex">
-            <div class="me-3">
-              <img
-                src="https://media.licdn.com/dms/image/v2/C4E16AQHh3C2MR0M4LQ/profile-displaybackgroundimage-shrink_200_800/profile-displaybackgroundimage-shrink_200_800/0/1599678332108?e=2147483647&v=beta&t=3I8VAHboRUcl-tI18CZNrXKcHksgqOcGgBrrDhBNMbI"
-                alt="Logo empresa" class="rounded" style="width: 60px; height: 60px; object-fit: cover;">
-            </div>
-            <div>
-              <h5 class="fw-semibold mb-1">Soporte tecnico informatico</h5>
-              <p class="mb-1 text-muted">Sanatorio Frances</p>
-              <p class="mb-1"><small class="text-muted">May 2025</small></p>
+      <!-- Experiencia y Educación -->
+      <div class="row mb-5">
+        <!-- Experiencia -->
+        <div class="col-md-6">
+          <div class="accordion" id="accordionExperiencia">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseExperiencia" aria-expanded="true" aria-controls="collapseExperiencia">
+                  <h3 class="mb-0 fw-bold">Experiencia</h3>
+                </button>
+              </h2>
+              <div id="collapseExperiencia" class="accordion-collapse collapse show"
+                data-bs-parent="#accordionExperiencia">
+                <div class="accordion-body">
+                  <div class="card shadow-sm mb-3">
+                    <div class="card-body d-flex">
+                      <div class="me-3">
+                        <img
+                          src="https://media.licdn.com/dms/image/v2/C4E16AQHh3C2MR0M4LQ/profile-displaybackgroundimage-shrink_200_800/profile-displaybackgroundimage-shrink_200_800/0/1599678332108?e=2147483647&v=beta&t=3I8VAHboRUcl-tI18CZNrXKcHksgqOcGgBrrDhBNMbI"
+                          alt="Logo empresa" class="rounded">
+                      </div>
+                      <div>
+                        <h5 class="fw-semibold mb-1">Soporte tecnico informatico</h5>
+                        <p class="mb-1 text-muted">Sanatorio Frances</p>
+                        <p class="mb-1"><small class="text-muted">May 2025</small></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Educación -->
-      <div class="col-12 mb-5" data-aos="fade-up">
-        <h3 class="mb-3 fw-bold">Educación</h3>
-        <div class="card shadow-sm mb-3">
-          <div class="card-body d-flex">
-            <div class="me-3">
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqoBYVidyHczEISFiXpKyu-_B2D6XoMLbtpw&s"
-                alt="Logo institución" class="rounded" style="width: 60px; height: 60px; object-fit: cover;">
-            </div>
-            <div>
-              <h5 class="fw-semibold mb-1">Instituto Superior Politécnico de Córdoba</h5>
-              <p class="mb-1 text-muted">Tecnicatura en Desarrollo de Software</p>
-              <p class="mb-1"><small class="text-muted">Mar 2024 – Presente</small></p>
+        <!-- Educación -->
+        <div class="col-md-6">
+          <div class="accordion" id="accordionEducacion">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseEducacion" aria-expanded="true" aria-controls="collapseEducacion">
+                  <h3 class="mb-0 fw-bold">Educación</h3>
+                </button>
+              </h2>
+              <div id="collapseEducacion" class="accordion-collapse collapse show" data-bs-parent="#accordionEducacion">
+                <div class="accordion-body">
+                  <div class="card shadow-sm mb-3">
+                    <div class="card-body d-flex">
+                      <div class="me-3">
+                        <img
+                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqoBYVidyHczEISFiXpKyu-_B2D6XoMLbtpw&s"
+                          alt="Logo institución" class="rounded">
+                      </div>
+                      <div>
+                        <h5 class="fw-semibold mb-1">Instituto Superior Politécnico de Córdoba</h5>
+                        <p class="mb-1 text-muted">Tecnicatura en Desarrollo de Software</p>
+                        <p class="mb-1"><small class="text-muted">Mar 2024 – Presente</small></p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card shadow-sm mb-3">
+                    <div class="card-body d-flex">
+                      <div class="me-3">
+                        <img src="./assets/estudios/dev.png" alt="Logo institución" class="rounded">
+                      </div>
+                      <div>
+                        <h5 class="fw-semibold mb-1">Technology with Purpose</h5>
+                        <p class="mb-1 text-muted">Dev</p>
+                        <p class="mb-1"><small class="text-muted">Mar 2025</small></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-
-        </div>
-        <div class="card shadow-sm mb-3">
-          <div class="card-body d-flex">
-            <div class="me-3">
-              <img src="./assets/estudios/dev.png" alt="Logo institución" class="rounded"
-                style="width: 60px; height: 60px; object-fit: cover;">
-            </div>
-            <div>
-              <h5 class="fw-semibold mb-1">Technology with Purpose</h5>
-              <p class="mb-1 text-muted">Dev</p>
-              <p class="mb-1"><small class="text-muted">Mar 2025</small></p>
-            </div>
-          </div>
-
         </div>
       </div>
 
       <!-- Proyectos -->
       <div class="col-12" data-aos="fade-up">
-        <h2 class="text-center mb-4">Proyectos Destacados</h2>
+        <h2 class="text-center text-primary mb-4">Proyectos Destacados</h2>
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="card h-100 shadow-sm">
@@ -221,6 +249,8 @@
           <a href="https://github.com/Aubar48" target="_blank" class="fs-4"><i class="fab fa-github"></i></a>
           <a href="https://www.linkedin.com/in/aubar48/" target="_blank" class="fs-4"><i
               class="fab fa-linkedin"></i></a>
+          <a href="./assets/Curriculum_Vitae_Nahuel_Argandoña.pdf" target="_blank" title="CV"><i
+              class="pt-2 fs-4 fas fa-file-alt"></i></a>
         </div>
       </div>
       <hr class="border-secondary my-3">
