--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,29 +16,30 @@
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg px-4 sticky-top shadow">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <button class="btn btn-outline-primary nav-link shadow-lg mt-2" onclick="toggleTheme()"><i
-                class="fas fa-moon"></i> Dark
-              Mode</button>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="https://wa.me/+5493517587047" target="_blank"><img
-                src="./assets/icon/icons8-whatsapp.svg" class="wsp" alt="WhatsApp" width="40" height="40"></a></li>
-        </ul>
+  <header>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg px-4 sticky-top shadow">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <button class="btn btn-outline-primary nav-link shadow-lg mt-2" onclick="toggleTheme()"><i
+                  class="fas fa-moon"></i> Dark
+                Mode</button>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="https://wa.me/+5493517587047" target="_blank"><img
+                  src="./assets/icon/icons8-whatsapp.svg" class="wsp" alt="WhatsApp" width="40" height="40"></a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-
+    </nav>
+  </header>
   <!-- Carousel -->
-  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+  <section id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true"
         aria-label="Slide 1"></button>
@@ -46,42 +47,75 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assets/ispc.png" class="d-block w-100" alt="...">
+        <img src="./assets/carrousel/ispc.webp" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./assets/ispc2.png" class="d-block w-100" alt="...">
+        <img src="./assets/carrousel/ispc2.webp" class="d-block w-100" alt="...">
       </div>
     </div>
-  </div>
+  </section>
 
   <!-- Main Content -->
-  <div class="container my-5">
+  <main class="container my-5">
     <div class="row">
       <!-- Sobre Mí -->
-      <div class="col-12 mb-5" data-aos="fade-up" id="about">
+      <section class="col-12 mb-5" data-aos="fade-up" id="about">
         <div class="row align-items-center">
-          <div class="col-md-6">
-            <p class="lead text-primary fs-3">Hi, I’m Nahuel Argandoña. Welcome to my profile</p>
-            <p>I’m from Argentina and I live in Córdoba Capital now. I’m 31 years old, studying web programming full
-              stack is a pleasure for me in Egg Education & Argentina Programa 4.0 MindHub LA & Digital House with
-              Fundacion Formar & Argentina Programa 4.0 UTN, and I am currently studying software development technology
-              at the Instituto Superior Politecnico de Córdoba "ISPC". Thanks for taking a look 🐣</p>
-            <div class="social-links d-flex gap-4 fs-4 mb-3 text-primary">
-              <a href="https://github.com/Aubar48" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/aubar48/" target="_blank" title="LinkedIn"><i
-                  class="fab fa-linkedin"></i></a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <img src="./assets/yo.jpg" alt="Perfil" class="border-bottom border-top border-primary border-3 img-fluid rounded shadow">
-          </div>
+          <section class="col-md-6">
+            <h1 class="lead text-primary fs-3">Hola, soy Nahuel Argandoña, Bienvenido a mi perfil</h1>
+            <p>Actualmente vivo en Córdoba Capital. Tengo 32 años y estoy estudiando la
+              Tecnicatura Superior en Desarrollo de Software en el Instituto Superior Politécnico de Córdoba (ISPC).
+            </p>
+            <p>🐣 He completado capacitaciones en Programación Web Full Stack a través de Egg Education & Argentina
+              Programa 4.0, MindHub LA & Digital House con Fundación Formar, y Argentina Programa 4.0 con la UTN.
+              Aprender y construir en tecnología es una verdadera pasión para mí. ¡Gracias por tomarte el tiempo de
+              mirar</p>
+            <section>
+              <a href="https://glittering-lolly-b5e4d4.netlify.app/" target="_blank">
+                <img
+                  src="https://img.shields.io/badge/Portfolio-%23333?style=for-the-badge&logo=portfolio&logoColor=white">
+              </a>
+              <a href="https://www.linkedin.com/in/Aubar48" target="_blank">
+                <img
+                  src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white">
+              </a>
+            </section>
+
+            <section class="icons-skills">
+              <img align="center" alt="PYTHON" height="40" width="50"
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg">
+              <img align="center" alt="JS" height="30" width="40"
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
+              <img align="center" alt="HTML" height="30" width="40"
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
+              <img align="center" alt="CSS" height="30" width="40"
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
+              <img align="center" alt="Bootstrap" height="40" width="50"
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-original.svg">
+              <img align="center" alt="tailwindcss" height="40" width="50"
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/tailwindcss/tailwindcss-original.svg">
+              <img align="center" alt="REACT" height="40" width="50"
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original.svg">
+              <img align="center" alt="ANGULAR" height="40" width="50"
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/angular/angular-original.svg">
+              <img align="center" alt="MYSQL" height="40" width="50"
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original.svg">
+              <img align="center" alt="MongoDb" height="40" width="50"
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mongodb/mongodb-original.svg">
+            </section>
+
+          </section>
+          <section class="col-md-6">
+            <img src="./assets/profile/nahuel.webp" alt="Perfil"
+              class="border-bottom border-top border-primary border-3 img-fluid rounded shadow">
+          </section>
         </div>
-      </div>
+      </section>
 
       <!-- Experiencia y Educación -->
-      <div class="row mb-5">
+      <section class="row mb-5">
         <!-- Experiencia -->
-        <div class="col-md-6">
+        <section class="col-md-6">
           <div class="accordion" id="accordionExperiencia">
             <div class="accordion-item">
               <h2 class="accordion-header">
@@ -96,9 +130,7 @@
                   <div class="card shadow-sm mb-3">
                     <div class="card-body d-flex">
                       <div class="me-3">
-                        <img
-                          src="https://media.licdn.com/dms/image/v2/C4E16AQHh3C2MR0M4LQ/profile-displaybackgroundimage-shrink_200_800/profile-displaybackgroundimage-shrink_200_800/0/1599678332108?e=2147483647&v=beta&t=3I8VAHboRUcl-tI18CZNrXKcHksgqOcGgBrrDhBNMbI"
-                          alt="Logo empresa" class="rounded">
+                        <img src="./assets/experiencia/sanatorio_frances.webp" alt="Logo empresa" class="rounded">
                       </div>
                       <div>
                         <h5 class="fw-semibold mb-1">Soporte tecnico informatico</h5>
@@ -111,10 +143,10 @@
               </div>
             </div>
           </div>
-        </div>
+        </section>
 
         <!-- Educación -->
-        <div class="col-md-6">
+        <section class="col-md-6">
           <div class="accordion" id="accordionEducacion">
             <div class="accordion-item">
               <h2 class="accordion-header">
@@ -128,9 +160,7 @@
                   <div class="card shadow-sm mb-3">
                     <div class="card-body d-flex">
                       <div class="me-3">
-                        <img
-                          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqoBYVidyHczEISFiXpKyu-_B2D6XoMLbtpw&s"
-                          alt="Logo institución" class="rounded">
+                        <img src="assets/estudios/ISPC.webp" alt="Logo institución" class="rounded">
                       </div>
                       <div>
                         <h5 class="fw-semibold mb-1">Instituto Superior Politécnico de Córdoba</h5>
@@ -141,8 +171,8 @@
                   </div>
                   <div class="card shadow-sm mb-3">
                     <div class="card-body d-flex">
-                      <div class="me-3">
-                        <img src="./assets/estudios/dev.png" alt="Logo institución" class="rounded">
+                      <div class="me-3 rounded">
+                        <img src="./assets/estudios/dev.webp" alt="Logo institución" class="rounded">
                       </div>
                       <div>
                         <h5 class="fw-semibold mb-1">Technology with Purpose</h5>
@@ -155,23 +185,26 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
+        </section>
+      </section>
 
       <!-- Proyectos -->
-      <div class="col-12" data-aos="fade-up">
+      <section class="col-12" data-aos="fade-up">
         <h2 class="text-center text-primary mb-4">Proyectos Destacados</h2>
         <div class="row">
-          <div class="col-md-4 mb-4">
+          <section class="col-md-4 mb-4">
             <div class="card h-100 shadow-sm">
-              <img src="./assets/proyectos/pokemon.png" class="project-image" alt="E-commerce Platform">
+              <img src="./assets/proyectos/pokemon.webp" class="project-image" alt="E-commerce Platform">
               <div class="card-body">
-                <h5 class="card-title">Pokemon list</h5>
-                <p class="card-text">Se utilizo la api de pokemon para hacer una lista mostrada en cartas.</p>
+                <h5 class="card-title">Pokemon lista</h5>
+                <p class="card-text">Se utilizo la api de pokemon para hacer una lista de pokemones mostrados en cartas.
+                </p>
                 <div class="d-flex gap-2 mb-3">
-                  <span class="badge bg-primary">Angular</span>
-                  <span class="badge bg-success">Css</span>
-                  <span class="badge bg-info">Typescript</span>
+                  <span class="badge bg-primary">React</span>
+                  <span class="badge bg-success">Tailwindcss</span>
+                  <span class="badge bg-info">JavaScript</span>
+                  <span class="badge bg-dark">Api</span>
+
                 </div>
                 <div class="d-flex gap-2">
                   <a href="https://allpokemoncard48.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
@@ -180,8 +213,30 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-4 mb-4">
+          </section>
+          <section class="col-md-4 mb-4">
+            <div class="card h-100 shadow-sm">
+              <img src="./assets/proyectos/portfolio_angular.webp" class="project-image" alt="E-commerce Platform">
+              <div class="card-body">
+                <h5 class="card-title">Portfolio con Angular y Django</h5>
+                <p class="card-text">Se utilizo la api de pokemon para hacer una lista de pokemones mostrados en cartas.
+                </p>
+                <div class="d-flex gap-2 mb-3">
+                  <span class="badge bg-primary">Angular</span>
+                  <span class="badge bg-success">Bootstrap</span>
+                  <span class="badge bg-info">Typescript</span>
+                  <span class="badge bg-dark">Django</span>
+
+                </div>
+                <div class="d-flex gap-2">
+                  <a href="https://allpokemoncard48.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
+                  <a href="https://github.com/Aubar48/angular_list_pokemon"
+                    class="btn btn-outline-secondary btn-sm">Código</a>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section class="col-md-4 mb-4">
             <div class="card h-100 shadow-sm">
               <img src="https://github.com/Aubar48/Huggins/raw/master/public/images/lcrCrows.png" class="project-image"
                 alt="Task Manager">
@@ -198,19 +253,19 @@
                 </div>
               </div>
             </div>
-          </div>
+          </section>
         </div>
-      </div>
+      </section>
     </div>
-  </div>
+  </main>
 
   <!-- Spotify Player -->
-  <div class="container mb-5">
+  <section class="container mb-5">
     <iframe class="spotify-player shadow-sm"
       src="https://open.spotify.com/embed/playlist/37i9dQZF1DX8Uebhn9wzrS?utm_source=generator&theme=0" width="100%"
       height="152" frameBorder="0" allowfullscreen=""
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-  </div>
+  </section>
 
   <!-- Footer -->
   <footer class="py-4 mt-5">
@@ -227,7 +282,7 @@
           <a href="https://github.com/Aubar48" target="_blank" class="fs-4"><i class="fab fa-github"></i></a>
           <a href="https://www.linkedin.com/in/aubar48/" target="_blank" class="fs-4"><i
               class="fab fa-linkedin"></i></a>
-          </div>
+        </div>
       </div>
       <hr class="border-secondary my-3">
     </div>
