--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
             <p>Actualmente vivo en Córdoba Capital. Tengo 32 años y estoy estudiando la
               Tecnicatura Superior en Desarrollo de Software en el Instituto Superior Politécnico de Córdoba (ISPC).
             </p>
-            <p>🐣 He completado capacitaciones en Programación Web Full Stack a través de Egg Education & Argentina
-              Programa 4.0, MindHub LA & Digital House con Fundación Formar, y Argentina Programa 4.0 con la UTN.
-              Aprender y construir en tecnología es una verdadera pasión para mí. ¡Gracias por tomarte el tiempo de
+            <p>🐣 He completado capacitaciones en programación web full stack a través de los años, en Egg Education &
+              Argentina Programa 4.0, MindHub LA & Digital House con Fundación Formar, Argentina Programa 4.0 con la UTN,
+              Technology With Purpose de desarrollador full stack, qa manual y qa automatización.
+            </p>
+            <p>Aprender y construir en tecnología es una verdadera pasión para mí. ¡Gracias por tomarte el tiempo de
               mirar</p>
             <section>
               <a href="https://glittering-lolly-b5e4d4.netlify.app/" target="_blank">
@@ -197,7 +199,8 @@
               <img src="./assets/proyectos/pokemon.webp" class="project-image" alt="E-commerce Platform">
               <div class="card-body">
                 <h5 class="card-title">Pokemon lista</h5>
-                <p class="card-text">Se utilizo la api de pokemon para hacer una lista de pokemones mostrados en cartas.
+                <p class="card-text">Se utilizo la api de pokemon para hacer una lista de pokemones mostrados en cartas
+                  con sus respectivos stat's.
                 </p>
                 <div class="d-flex gap-2 mb-3">
                   <span class="badge bg-primary">React</span>
@@ -218,8 +221,9 @@
             <div class="card h-100 shadow-sm">
               <img src="./assets/proyectos/portfolio_angular.webp" class="project-image" alt="E-commerce Platform">
               <div class="card-body">
-                <h5 class="card-title">Portfolio con Angular y Django</h5>
-                <p class="card-text">Se utilizo la api de pokemon para hacer una lista de pokemones mostrados en cartas.
+                <h5 class="card-title">Portfolio proyecto</h5>
+                <p class="card-text">Se escalo el portfolio basico a nuevas tecnologias, usando en el frontend Angular y
+                  creando una Api rest con Django.
                 </p>
                 <div class="d-flex gap-2 mb-3">
                   <span class="badge bg-primary">Angular</span>
@@ -229,8 +233,8 @@
 
                 </div>
                 <div class="d-flex gap-2">
-                  <a href="https://allpokemoncard48.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
-                  <a href="https://github.com/Aubar48/angular_list_pokemon"
+                  <a href="https://glittering-lolly-b5e4d4.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
+                  <a href="https://github.com/Aubar48/portfolio_mock"
                     class="btn btn-outline-secondary btn-sm">Código</a>
                 </div>
               </div>
@@ -238,18 +242,20 @@
           </section>
           <section class="col-md-4 mb-4">
             <div class="card h-100 shadow-sm">
-              <img src="https://github.com/Aubar48/Huggins/raw/master/public/images/lcrCrows.png" class="project-image"
-                alt="Task Manager">
+              <img src="assets/proyectos/app-clima.webp" class="project-image" alt="Task Manager">
               <div class="card-body">
-                <h5 class="card-title">Huggins landing page</h5>
-                <p class="card-text">Landing page para el gremio Huggins del video juego Night Crows.</p>
+                <h5 class="card-title">App del clima</h5>
+                <p class="card-text">Se hizo uso de la Api Weatherclima para generar una interfaz grafica para poder
+                  visualizar el clima y en acompañar en la toma de desiciones cotidianas</p>
                 <div class="d-flex gap-2 mb-3">
                   <span class="badge bg-primary">React</span>
                   <span class="badge bg-success">Tailwindcss</span>
+                  <span class="badge bg-info">JavaScript</span>
+                  <span class="badge bg-dark">Api</span>
                 </div>
                 <div class="d-flex gap-2">
-                  <a href="https://latincrowshuginn.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
-                  <a href="https://github.com/Aubar48/Huggins" class="btn btn-outline-secondary btn-sm">Código</a>
+                  <a href="https://appclimanahuel.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
+                  <a href="https://github.com/Aubar48/app-clima-react" class="btn btn-outline-secondary btn-sm">Código</a>
                 </div>
               </div>
             </div>
