change desing in proyect

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                   <span class="badge bg-primary">React</span>
                   <span class="badge bg-success">Tailwindcss</span>
                   <span class="badge bg-info">JavaScript</span>
-                  <span class="badge bg-dark">Api</span>
+                  <span class="badge bg-primary">Api</span>
 
                 </div>
                 <div class="d-flex gap-2">
@@ -229,7 +229,7 @@
                   <span class="badge bg-primary">Angular</span>
                   <span class="badge bg-success">Bootstrap</span>
                   <span class="badge bg-info">Typescript</span>
-                  <span class="badge bg-dark">Django</span>
+                  <span class="badge bg-primary">Django</span>
 
                 </div>
                 <div class="d-flex gap-2">
@@ -251,7 +251,7 @@
                   <span class="badge bg-primary">React</span>
                   <span class="badge bg-success">Tailwindcss</span>
                   <span class="badge bg-info">JavaScript</span>
-                  <span class="badge bg-dark">Api</span>
+                  <span class="badge bg-primary">Api</span>
                 </div>
                 <div class="d-flex gap-2">
                   <a href="https://appclimanahuel.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
