--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
                 <img
                   src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white">
               </a>
+              <a href="https://github.com/Aubar48" target="_blank">
+                <img
+                  src="https://img.shields.io/badge/GitHub-%23333?style=for-the-badge&logo=portfolio&logoColor=white">
+              </a>
             </section>
 
             <section class="icons-skills">
