add cv and correcion diseño tablet proyectos destacados

--- a/index.html
+++ b/index.html
@@ -67,25 +67,33 @@
               Tecnicatura Superior en Desarrollo de Software en el Instituto Superior Politécnico de Córdoba (ISPC).
             </p>
             <p>🐣 He completado capacitaciones en programación web full stack a través de los años, en Egg Education &
-              Argentina Programa 4.0, MindHub LA & Digital House con Fundación Formar, Argentina Programa 4.0 con la UTN,
+              Argentina Programa 4.0, MindHub LA & Digital House con Fundación Formar, Argentina Programa 4.0 con la
+              UTN,
               Technology With Purpose de desarrollador full stack, qa manual y qa automatización.
             </p>
             <p>Aprender y construir en tecnología es una verdadera pasión para mí. ¡Gracias por tomarte el tiempo de
               mirar</p>
             <section>
-              <a href="https://glittering-lolly-b5e4d4.netlify.app/" target="_blank">
+              <a href="https://www.canva.com/design/DAFoP4HTDqk/YW9Jg6z0ouwf7GeaChLSvg/view?utm_content=DAFoP4HTDqk&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=he143a9d067"
+                target="_blank" class="ver-cv">
                 <img
-                  src="https://img.shields.io/badge/Portfolio-%23333?style=for-the-badge&logo=portfolio&logoColor=white">
+                  src="https://img.shields.io/badge/Curriculum-%23333?style=for-the-badge&logo=curriculum&logoColor=white">
               </a>
               <a href="https://www.linkedin.com/in/Aubar48" target="_blank">
                 <img
                   src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white">
               </a>
               <a href="https://github.com/Aubar48" target="_blank">
-                <img
-                  src="https://img.shields.io/badge/GitHub-%23333?style=for-the-badge&logo=portfolio&logoColor=white">
+                <img src="https://img.shields.io/badge/GitHub-%23333?style=for-the-badge&logo=github&logoColor=white">
               </a>
             </section>
+
+            <div id="modal-cv" class="modal-cv">
+              <div class="modal-content-cv">
+                <span class="close-cv" onclick="cerrarModalCV()">&times;</span>
+                <iframe src="./assets/Curriculum_Vitae_Nahuel_Argandoña.pdf#zoom=100" frameborder="0"></iframe>
+              </div>
+            </div>
 
             <section class="icons-skills">
               <img align="center" alt="PYTHON" height="40" width="50"
@@ -198,7 +206,7 @@
       <section class="col-12" data-aos="fade-up">
         <h2 class="text-center text-primary mb-4">Proyectos Destacados</h2>
         <div class="row">
-          <section class="col-md-4 mb-4">
+          <section class="col-12 col-lg-4 mb-4">
             <div class="card h-100 shadow-sm">
               <img src="./assets/proyectos/pokemon.webp" class="project-image" alt="E-commerce Platform">
               <div class="card-body">
@@ -211,7 +219,6 @@
                   <span class="badge bg-success">Tailwindcss</span>
                   <span class="badge bg-info">JavaScript</span>
                   <span class="badge bg-primary">Api</span>
-
                 </div>
                 <div class="d-flex gap-2">
                   <a href="https://allpokemoncard48.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
@@ -221,7 +228,8 @@
               </div>
             </div>
           </section>
-          <section class="col-md-4 mb-4">
+
+          <section class="col-12 col-lg-4 mb-4">
             <div class="card h-100 shadow-sm">
               <img src="./assets/proyectos/portfolio_angular.webp" class="project-image" alt="E-commerce Platform">
               <div class="card-body">
@@ -234,7 +242,6 @@
                   <span class="badge bg-success">Bootstrap</span>
                   <span class="badge bg-info">Typescript</span>
                   <span class="badge bg-primary">Django</span>
-
                 </div>
                 <div class="d-flex gap-2">
                   <a href="https://glittering-lolly-b5e4d4.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
@@ -244,13 +251,15 @@
               </div>
             </div>
           </section>
-          <section class="col-md-4 mb-4">
+
+          <section class="col-12 col-lg-4 mb-4">
             <div class="card h-100 shadow-sm">
               <img src="assets/proyectos/app-clima.webp" class="project-image" alt="Task Manager">
               <div class="card-body">
                 <h5 class="card-title">App del clima</h5>
                 <p class="card-text">Se hizo uso de la Api Weatherclima para generar una interfaz grafica para poder
-                  visualizar el clima y en acompañar en la toma de desiciones cotidianas</p>
+                  visualizar el clima y en acompañar en la toma de desiciones cotidianas
+                </p>
                 <div class="d-flex gap-2 mb-3">
                   <span class="badge bg-primary">React</span>
                   <span class="badge bg-success">Tailwindcss</span>
@@ -259,13 +268,15 @@
                 </div>
                 <div class="d-flex gap-2">
                   <a href="https://appclimanahuel.netlify.app/" class="btn btn-outline-primary btn-sm">Demo</a>
-                  <a href="https://github.com/Aubar48/app-clima-react" class="btn btn-outline-secondary btn-sm">Código</a>
+                  <a href="https://github.com/Aubar48/app-clima-react"
+                    class="btn btn-outline-secondary btn-sm">Código</a>
                 </div>
               </div>
             </div>
           </section>
         </div>
       </section>
+
     </div>
   </main>
 
