--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                 </button>
               </h2>
               <div id="collapseExperiencia" class="accordion-collapse collapse show">
-                <div class="accordion-body">
-                  <div class="card shadow-sm mb-3">
+                <div class="accordion-body" id="experienciaContainer">
+                  <div class="card shadow-sm mb-3 draggable-card" draggable="true">
                     <div class="card-body d-flex">
                       <div class="me-3">
                         <img src="./assets/experiencia/sanatorio_frances.webp" alt="Logo empresa" class="rounded">
@@ -157,7 +157,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card shadow-sm mb-3">
+                  <div class="card shadow-sm mb-3 draggable-card" draggable="true">
                     <div class="card-body d-flex">
                       <div class="me-3">
                         <img src="./assets/experiencia/dges.webp" alt="Logo empresa" class="rounded">
@@ -186,8 +186,8 @@
                 </button>
               </h2>
               <div id="collapseEducacion" class="accordion-collapse collapse show">
-                <div class="accordion-body">
-                  <div class="card shadow-sm mb-3">
+                <div class="accordion-body" id="educacionContainer">
+                  <div class="card shadow-sm mb-3 draggable-card" draggable="true">
                     <div class="card-body d-flex">
                       <div class="me-3">
                         <img src="assets/estudios/ISPC.webp" alt="Logo institución" class="rounded">
@@ -199,7 +199,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card shadow-sm mb-3">
+                  <div class="card shadow-sm mb-3 draggable-card" draggable="true">
                     <div class="card-body d-flex">
                       <div class="me-3 rounded">
                         <img src="./assets/estudios/dev.webp" alt="Logo institución" class="rounded">
