--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <meta name="description" content="Portfolio de Nahuel Argandoña, Desarrollador Web Full Stack especializado en Angular, React, Django y Python. Estudiante de Tecnicatura en Desarrollo de Software en ISPC.">
   
   <!-- Security Headers -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://necolas.github.io; img-src 'self' data: https: http:; font-src 'self' https://cdnjs.cloudflare.com; frame-src https://open.spotify.com; connect-src 'self' https://open.spotify.com;">
-  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://unpkg.com https://open.spotify.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://necolas.github.io; img-src 'self' data: https: http:; font-src 'self' https://cdnjs.cloudflare.com; frame-src 'self' https://open.spotify.com; connect-src 'self' https://cdn.jsdelivr.net https://unpkg.com https://open.spotify.com https://*.scdn.co https://*.spotify.com; media-src https://open.spotify.com https://*.scdn.co;">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta name="referrer" content="strict-origin-when-cross-origin">
-  <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
+  <link rel="icon" href="data:,">
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
