se dejaron estatico en abierto los acordiones

--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
           <div class="accordion" id="accordionExperiencia">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingExperiencia">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseExperiencia" aria-expanded="true" aria-controls="collapseExperiencia">
+                <button class="accordion-button" type="button" aria-expanded="true" aria-controls="collapseExperiencia">
                   <span class="fw-bold fs-5">Experiencia</span>
                 </button>
               </h2>
@@ -187,8 +186,7 @@
           <div class="accordion" id="accordionEducacion">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingEducacion">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseEducacion" aria-expanded="true" aria-controls="collapseEducacion">
+                <button class="accordion-button" type="button" aria-expanded="true" aria-controls="collapseEducacion">
                   <span class="fw-bold fs-5">Educación</span>
                 </button>
               </h2>
@@ -231,8 +229,7 @@
           <div class="accordion" id="accordionProyectos">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingProyectos">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseProyectos" aria-expanded="true" aria-controls="collapseProyectos">
+                <button class="accordion-button" type="button" aria-expanded="true" aria-controls="collapseProyectos">
                   <span class="fw-bold fs-5">Proyectos Destacados</span>
                 </button>
               </h2>
