se quito loading lazy de la primera img del carrousel y se agrego fetchpriority high y lazy en la foto de perfil

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assets/carrousel/ispc.webp" class="d-block w-100" alt="ISPC Banner" width="1715" height="263" loading="lazy">
+        <img src="./assets/carrousel/ispc.webp" class="d-block w-100" alt="ISPC Banner" width="1715" height="263" fetchpriority="high">
       </div>
       <div class="carousel-item">
         <img src="./assets/carrousel/ispc2.webp" class="d-block w-100" alt="ISPC Banner 2" width="1715" height="263" loading="lazy">
@@ -146,7 +146,7 @@
           <section class="col-md-4">
             <img src="./assets/profile/nahuel.webp" alt="Perfil de Nahuel Argandoña"
               class="border-bottom border-top border-primary border-3 img-fluid rounded shadow"
-              width="972" height="1296" fetchpriority="high">
+              width="972" height="1296" loading="lazy">
           </section>
         </div>
       </section>
